# wutch

./: .bumpversion.cfg  .gitignore  README.md  pyproject.toml  test.py  wutch.cfg  wutch.js
docs/: Makefile  conf.py  index.rst  page.rst
docs/_static/: watchdog-128px.psd
wutch/: .readthedocs.yml  __init__.py  app.py  config.py  events.py  injector.py  server.py  server_old.py  threaded.py  watcher.py
wutch/js/: wutch.js  wutch_fetch.js
