[tool.poetry]
name = "wutch"
version = "0.1.0"
description = ""
authors = ["vduseev <vagiz@duseev.com>"]

[tool.poetry.scripts]
wutch = "wutch:launch_cli"

[tool.poetry.dependencies]
python = "^3.8"
watchdog = "^1.0.2"
ilexconf = "^0.9.5"
loguru = "^0.5.3"
beautifulsoup4 = "^4.9.3"
aiohttp = "^3.7.3"
aiofiles = "^0.6.0"

[tool.poetry.dev-dependencies]
ipython = "^7.19.0"
black = "^20.8b1"
Sphinx = "^3.4.1"
pydata-sphinx-theme = "^0.4.1"
jedi = "0.17.2"

[tool.black]
line-length = 78

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
