[tool.poetry]
authors = ["vduseev <vagiz@duseev.com>"]
description = "Watch and rebuild your files like LiveServer"
documentation = "https://wutch.readthedocs.io"
homepage = "https://github.com/vduseev/wutch"
keywords = ["liveserver", "sphinx", "rebuild", "watcher", "watchdog"]
license = "Apache 2"
maintainers = ["vduseev <vagiz@duseev.com>"]
name = "wutch"
readme = "README.md"
repository = "https://github.com/vduseev/wutch"
version = "1.0.2"

[tool.poetry.scripts]
wutch = "wutch:cli"

[tool.poetry.dependencies]
aiofiles = "^0.6.0"
aiohttp = "^3.7.3"
beautifulsoup4 = "^4.9.3"
ilexconf = "^0.9.5"
loguru = "^0.5.3"
python = "^3.8"
watchdog = "^1.0.2"

[tool.poetry.dev-dependencies]
Sphinx = "^3.4.1"
black = "^20.8b1"
ipython = "^7.19.0"
jedi = "0.17.2"
pydata-sphinx-theme = "^0.4.1"

[tool.black]
line-length = 78

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
